# MultiVariatePointProcess

./: CMakeLists.txt
example/: CMakeLists.txt  fast_simulating_multivariate_hawkes.cc  learning_standard_hawkes.cc  likelihood_multivariate_hawkes.cc  tick_hawkes_data.h
include/: Optimizer.h  PlainHawkes.h
src/: Optimizer.cc  PlainHawkes.cc
